<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:gravity="center"
        android:layout_width="401dp"
        android:layout_height="423dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textMateria"
            android:layout_width="245dp"
            android:layout_height="74dp"
            android:gravity="center"
            android:text="@string/aplicaciones_moviles_y_sistemas_telem_ticos"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textExamen"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:textSize="15dp"
            android:text="@string/examen_pr_ctico" />

        <TextView
            android:id="@+id/textNombres"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:textSize="10dp"
            android:textColor="@color/black"
            android:text="@string/jeffersonvega_y_debbiedonoso" />

        <EditText
            android:id="@+id/editTextBusqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/busqueda_por_nombre"
            android:textSize="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_h_roes" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>